force-app/main/default/objects/Product_Image__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <description>The Content Document Id that then can be used to delete a file when it is requested to be deleted.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>