force-app/main/default/objects/Product_Image__c/fields/Product_Image_RichText__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_RichText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Image RichText</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>